# deliverypilot

./: .gitignore  CLAUDE.md  README.md  deliverypilot-spec-claude-code.md  docker-compose.yml  plan-infraestructura-clon-shipday.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_row_level_security.py  0003_staff_invite_fields.py  0004_sequence_update_grant.py
backend/app/: main.py  seed.py
backend/app/core/: config.py  deps.py  security.py  ws_manager.py
backend/app/db/: base.py  tenant.py
backend/app/models/: __init__.py  business.py  customer.py  driver.py  enums.py  location_ping.py  order.py  payment_method.py  product.py  proof.py  subscription.py  user.py
backend/app/schemas/: auth.py  common.py  customer.py  driver.py  order.py  payment_method.py  product.py  staff.py  user.py
backend/app/services/: auth_service.py  catalog_service.py  customer_defaults_service.py  customer_service.py  driver_service.py  fcm_service.py  geocoding_service.py  order_service.py  order_state_machine.py  payment_method_service.py  (+2 more)
backend/tests/: conftest.py  test_auth.py  test_customer_defaults_crud.py  test_customer_defaults_service.py  test_customers.py  test_fcm_service.py  test_geocoding_service.py  test_invite_flow.py  test_order_creation_customer_flow.py  test_order_state_machine.py  test_orders.py  test_payment_methods.py  test_prefill.py  test_pricing_service.py  test_products.py  test_rls.py  test_staff.py  test_tenant_isolation.py  test_ws.py  test_ws_manager.py
(+78 files in other folders)
