[tool.poetry]
name = "deliverypilot-backend"
version = "0.1.0"
description = "DeliveryPilot API — FastAPI + SQLAlchemy async + PostgreSQL"
authors = ["Cesar <lersar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.30"
alembic = "^1.14"
pydantic = { extras = ["email"], version = "^2.9" }
pydantic-settings = "^2.6"
python-jose = { extras = ["cryptography"], version = "^3.3" }
passlib = { extras = ["bcrypt"], version = "^1.7" }
redis = "^5.2"
sentry-sdk = { extras = ["fastapi"], version = "^2.17" }
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
python-dotenv = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
